<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/autostart_key"
        android:title="@string/autostart_key_title"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="@string/desktop_addr"
        android:title="@string/desktop_addr_title" />
    <EditTextPreference
        android:key="@string/desktop_port_key"
        android:title="@string/desktop_port_key_title"
        android:inputType="numberDecimal" />
    <EditTextPreference
        android:key="@string/login_key"
        android:title="@string/login_key_title" />
    <EditTextPreference
        android:key="@string/pass_key"
        android:title="@string/pass_key_title" />
    <EditTextPreference
        android:key="@string/port_key"
        android:title="@string/port_key_title"
        android:inputType="numberDecimal" />
</PreferenceScreen>